package swarm.patterns;

import swarm.robot.Robot;

public abstract class Pattern {

    protected Robot r;

    public Pattern(Robot r) {
        this.r = r;
    }

    public void setup() {

    }

    public void loop() {

    }

}