@startuml

title __PATTERNS's Class Diagram__\n

  namespace swarm {
    namespace patterns {
      class swarm.patterns.CircularMove {
          + CircularMove()
          + loop()
          + setup()
      }
    }
  }
  

  namespace swarm {
    namespace patterns {
      class swarm.patterns.GoToGoal {
          + GoToGoal()
          + loop()
          + setup()
      }
    }
  }
  

  namespace swarm {
    namespace patterns {
      class swarm.patterns.LinearMove {
          + LinearMove()
          + loop()
          + setup()
      }
    }
  }
  

  namespace swarm {
    namespace patterns {
      abstract class swarm.patterns.Pattern {
          + Pattern()
          + loop()
          + setup()
      }
    }
  }
  

  swarm.patterns.CircularMove -up-|> swarm.patterns.Pattern
  swarm.patterns.GoToGoal -up-|> swarm.patterns.Pattern
  swarm.patterns.LinearMove -up-|> swarm.patterns.Pattern
  swarm.patterns.Pattern o-- swarm.robot.Robot : r


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
